[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ssh-server"
version = "0.1.0"
description = "MCP SSH Server for Nokia SR OS and Linux hosts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-ssh-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
